--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
   <style>
     body {
       background-color: black;
+      color: white;
     }
   </style>
   <title>Hacked By ZishanAdThandar</title>
   <h1>Hacked By ZishanAdThandar</h1>
   <p>Hacked By ZishanAdThandar</p>
+  <a href="https://github.com/ZishanAdThandar">CONTACT</a>
   <script>alert("Hacked By ZishanAdThandar");</script>
 </html>
